--- a/CPMMethod.BlazorWasmClient/wwwroot/index.html
+++ b/CPMMethod.BlazorWasmClient/wwwroot/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>CPMMethod.BlazorWasmClient</title>
+    <title>Badania Operacyjne i Logistyka</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="CPMMethod.BlazorWasmClient.styles.css" rel="stylesheet" />
+    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
+    <script  src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js"  type="text/javascript"></script>
 </head>
 
 <body>
